# weight-tracker

./: .gitignore  Claude.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1de5fc1c060d_create_initial_tables.py
backend/app/: database.py  deps.py  main.py
backend/app/models/: medication.py  medication_dose.py  user.py  weight_log.py
backend/app/routers/: medications.py  stats.py  upload.py  users.py  weight_logs.py
backend/app/schemas/: medication.py  medication_dose.py  user.py  weight_log.py
backend/tests/: conftest.py  test_medications.py  test_stats.py  test_upload.py  test_users.py  test_weight_logs.py
example-data/: generate.py
example-data/user-a-wegovy/: medication_doses.csv  user.csv  weight_log.csv
example-data/user-b-mounjaro-switch/: medication_doses.csv  user.csv  weight_log.csv
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: api.js  index.css
frontend/src/components/: Dashboard.jsx  Onboarding.jsx  WeightChart.jsx
frontend/src/components/__tests__/: Onboarding.test.jsx
